[package]
name = "prometheus-api"
authors = ["Andreas Mallek <am@datargo.com>"]
version = "0.0.1"
edition = '2021'

[dependencies]
actix-rt = "2.9.0"
actix-web = { version = "4.4.0", features = ["openssl"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"
serde_json = "1.0.99"
openssl = { version = "0.10.57", features = ["v110"] }
env_logger = "0.10.0"
futures-util = "0.3.29"
